# greybound

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
core/: Cargo.toml
desktop/: Cargo.toml
docs/: next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json
knowledge/: getting-started.mdx  index.mdx  meta.json
lab/: .gitignore  README.md  pyproject.toml
lab/experiments/: 001-chain-reference-analysis.md  004-nam-reference-comparison.md  005-ac30hwh-nam-a2-first-render.md  006-spice-to-neural-cell-plan.md
lab/models/: README.md
lab/references/nam/: README.md
lab/schemas/: external-inputs-manifest.schema.json  nam-reference.schema.json  neural-cell-artifact.schema.json  spice-dataset-manifest.schema.json
lab/scripts/: nam_a2_render.py
lab/src/greybound_lab/: __init__.py  audio.py  cli.py  evaluation.py  external_inputs.py  integrated_neural.py  metrics.py  nam_render.py  neural_cell.py  render.py  report.py  rig_sweep.py  spice.py  stimuli.py
lab/tests/: test_evaluation.py  test_external_inputs.py  test_integrated_neural.py  test_metrics.py  test_nam_render.py  test_neural_cell.py  test_render.py  test_rig_sweep.py  test_spice.py  test_stimuli.py
rigs/: all-nox.json5  brigade-nox30.json5  celeste-nox30.json5  dartford-nox30.json5  godess-one-nox30.json5  jetstream-nox30.json5  lumen-nox30.json5  minotaur-nox30.json5  monarch-nox30.json5  muffin-nox30.json5  muon-nox30.json5  nox30-all-pedals-bypassed.json5  nox30-clean.json5  nox30-driven.json5  nox30-edge.json5  (+2 more)
wasm/: Cargo.toml
wasm/src/: lib.rs
(+140 files in other folders)
