[project]
name = "greybound-lab"
version = "0.1.0"
description = "Offline scientific R&D tools for Greybound model analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scipy>=1.12",
]

[project.scripts]
greybound-lab = "greybound_lab.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
