[package]
name = "greybound-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for the Greybound DSP engine."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
greybound = { path = "../core", default-features = false }
js-sys = "0.3"
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
